Minor adjustment to new-tweet, created footer section, no longer requires flex wrap

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -11,9 +11,8 @@
   padding: 0.5em;
 }
 
-.container .new-tweet form {
+.container .new-tweet .footer {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
 }
 
@@ -26,4 +25,6 @@
   margin-bottom: 1em;
   border-top: 1px;
   border-color: black;
+
+
 }
